--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,7 @@
 
   \newcaptionname{ngerman}\equationname{Formel}%
   \newcaptionname{ngerman}\listequationname{Formelverzeichnis}%
-
+\DeclareCaptionType{equ}[Gleichung][Gleichungsverzeichnis]
 % Zentriert auf linken Seiten die aktuelle Kapitelüberschrift,
 % auf rechten Seiten die Überschrift des aktuellen Abschnitts ausgeben:
 
