--- a/Versuch.tex
+++ b/Versuch.tex
@@ -428,7 +428,8 @@ In der Berechnung wird $L_q$ verwendet, da der Strom $I_1$ bei ohmscher Last ann
     \label{fig:abb1}
 \end{figure}
 
-\textcolor{red}{@Andy: bisch ufs gliche cho? Zusätzlich noch begründen wiso Querreaktanz relevant ist -> gemacht! Verständlich?}
+\textcolor{red}{@Andy: bisch ufs gliche cho? Zusätzlich noch begründen wiso Querreaktanz relevant ist -> gemacht! Verständlich?\\
+@Theo: Gleichung 1 ond Gleichung 2 beni of s glich echo ond  ech hätti d Abwichig au so begröndet. Aber d Glichig 3 esch mer ned ganz klar, resp. woher hesch die 397 Volt ?}
 \newpage
 
 
