Chli witer gmacht (hät äuä besser o chli paranoia psucht ;-) grafike hani scho värschosse...)

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -641,11 +641,47 @@ Die SM wurde für die Messung einem induktiven Laststoss ausgesetzt. In der Abbi
 
 \textcolor{red}{hier weiter}
 
+\section{SM am Netz}
 
-
-
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+  %      \includegraphics[width=\textwidth]{SM_Netzbetrieb_Uebersicht.pdf}
+    \caption{Übersicht SM am Netz}
+    \label{fig:abb1}
+\end{figure}\vspace{0.3cm}
+ Bei diesem Versuch läuft die Synchronmaschine direkt am Netz. Dazu muss sie zuerst synchronisiert werden. 
 
 \subsection{Synchronisation}
+Der Asynchronmotor mit einem Widerstand im Rottorkreis Treibt die Welle auf rund 1490 $\frac{1}{min}$. Danach dient die Gleichstrommaschine zum erhöhen auf 1500 $\frac{1}{min}$. Nach dem die Ausgangsspannung der Synchronmaschine $U_1$ über den Erregerstrom an die Netzspannung $U_{L1}$ angepasst ist, erfolgt über das Moment der Gleichstrommaschine das Angleichen der Phasenlage von $U_1$ an $U_{L1}$. Das Synchronoskop zeigt die Differenz der beiden an. Bei Synchronlauf werden sie zusammen geschaltet. 
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+  %      \includegraphics[width=0.6\textwidth]{SM_Synchronisation.pdf}
+    \caption{Darstellung der Synchronisation}
+    \label{fig:abb1}
+\end{figure}\vspace{0.3cm}
+
+\subsection{Dämpferwicklung}
+In nächsten Versuch läuft die Asynchronmaschine als Dämpferwicklung mit. Sie dämpft Schwingungen die durch starke Laständerungen oder bei Zuschalten eines nicht ganz synchron laufenden Netzes entstehen. Eine Strommessung im Rotorkreis der ASM zeigt das Verhalten.
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+ %       \includegraphics[width=0.8\textwidth]{641_Bild2_LastabwurfKurzgeschlossen}
+    \caption{Rotorstrom der ASM bei kurzgeschlossenem Rotor}
+    \label{fig:abb1}
+\end{figure}\vspace{0.3cm}
+Deutlich ist sichtbar, wie der Strom bei einem Lastabwurf kurzzeitig ansteigt und sich dann schnell wieder um 0 einpändelt. Anders sieht es aus nach der Reduktion der Dämpfung durch einen Widerstand am Rotor der ASM. 
+
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+%        \includegraphics[width=0.8\textwidth]{641_Bild3_LastabwurfWiderstand}
+    \caption{Rotorstrom der ASM bei Widerstand am Rotor}
+    \label{fig:abb1}
+\end{figure}\vspace{0.3cm}
+Die im Strom sichtbaren Schwingungen sind auch gut hör- und spürbar.
+
 \subsection{Variation der Wirkleistung}
 \subsection{Variation der Blindleistung}
 
