Paar Figure wider härä bastlet

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -639,10 +639,6 @@ Die SM wurde für die Messung einem induktiven Laststoss ausgesetzt. In der Abbi
 \addtocontents{toc}{\protect\newpage}  % seitenumbruch im Inhaltsverzeichnis erzwingen
 \section{SM am Netz}
 
-\textcolor{red}{hier weiter}
-
-\section{SM am Netz}
-
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
@@ -667,7 +663,7 @@ In nächsten Versuch läuft die Asynchronmaschine als Dämpferwicklung mit. Sie 
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
- %       \includegraphics[width=0.8\textwidth]{641_Bild2_LastabwurfKurzgeschlossen}
+    \includegraphics[width=0.8\textwidth]{641_Bild2_LastabwurfKurzgeschlossen}
     \caption{Rotorstrom der ASM bei kurzgeschlossenem Rotor}
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
@@ -676,7 +672,7 @@ Deutlich ist sichtbar, wie der Strom bei einem Lastabwurf kurzzeitig ansteigt un
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
-%        \includegraphics[width=0.8\textwidth]{641_Bild3_LastabwurfWiderstand}
+		\includegraphics[width=0.8\textwidth]{641_Bild3_LastabwurfWiderstand}
     \caption{Rotorstrom der ASM bei Widerstand am Rotor}
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
