--- a/Versuch.tex
+++ b/Versuch.tex
@@ -431,7 +431,8 @@ In der Berechnung wird $L_q$ verwendet, da der Strom $I_1$ bei ohmscher Last ann
 \textcolor{red}{@Andy: bisch ufs gliche cho? Zusätzlich noch begründen wiso Querreaktanz relevant ist -> gemacht! Verständlich?\\
 @Theo: Gleichung 1 ond Gleichung 2 beni of s glich echo ond  ech hätti d Abwichig au so begröndet. Aber d Glichig 3 esch mer ned ganz klar, resp. woher hesch die 397 Volt ? ok ha d Leerlaufkennlinie :P, aber wiso hesch dor worzle 3 grächnet ? esch demfall d Achsebeschreftig falsch ? well det hemmer ja au d Phasespannig gmässe - Phase zu Sternpunkt\\
 Theo: Bisch sicher? de isch si aber huärä höch und de würd d'Rächnig nid uf ga... hei mär dert nid Phase-Phase gmässä?\\
-Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(}
+Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(\\
+Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$}
 \newpage
 
 
