--- a/Versuch.tex
+++ b/Versuch.tex
@@ -645,7 +645,7 @@ Die SM wurde für die Messung einem induktiven Laststoss ausgesetzt. In der Abbi
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
-  %      \includegraphics[width=\textwidth]{SM_Netzbetrieb_Uebersicht.pdf}
+        \includegraphics[width=\textwidth]{SM_Netzbetrieb_Uebersicht.pdf}
     \caption{Übersicht SM am Netz}
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
@@ -656,11 +656,19 @@ Der Asynchronmotor mit einem Widerstand im Rottorkreis Treibt die Welle auf rund
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
-  %      \includegraphics[width=0.6\textwidth]{SM_Synchronisation.pdf}
+        \includegraphics[width=0.6\textwidth]{SM_Synchronisation.pdf}
     \caption{Darstellung der Synchronisation}
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
-
+\subsubsection{Verbinden des Nulleiter}
+Bei verbundem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung und der Synchronmaschinenausgangspannung erkennen. Die Unterschiede entstehen durch die nicht 100\% symmetrisch gewickelte Maschine. Am detlichsten zeigt sich der Anteil einer dritten Harmonischen im Strom der Sternpunktverbindung.
+\vspace{0.3cm}
+\begin{figure}[H]
+    \centering
+ %       \includegraphics[width=0.6\textwidth]{SM_Synchronisation.pdf}
+    \caption{Darstellung der Synchronisation}
+    \label{fig:abb1}
+\end{figure}\vspace{0.3cm}
 \subsection{Dämpferwicklung}
 In nächsten Versuch läuft die Asynchronmaschine als Dämpferwicklung mit. Sie dämpft Schwingungen die durch starke Laständerungen oder bei Zuschalten eines nicht ganz synchron laufenden Netzes entstehen. Eine Strommessung im Rotorkreis der ASM zeigt das Verhalten.
 \vspace{0.3cm}
