Chat Updatet und Variation der Wirkleistung resp. Blindleistung Daten eingefügt

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -432,7 +432,9 @@ In der Berechnung wird $L_q$ verwendet, da der Strom $I_1$ bei ohmscher Last ann
 @Theo: Gleichung 1 ond Gleichung 2 beni of s glich echo ond  ech hätti d Abwichig au so begröndet. Aber d Glichig 3 esch mer ned ganz klar, resp. woher hesch die 397 Volt ? ok ha d Leerlaufkennlinie :P, aber wiso hesch dor worzle 3 grächnet ? esch demfall d Achsebeschreftig falsch ? well det hemmer ja au d Phasespannig gmässe - Phase zu Sternpunkt\\
 Theo: Bisch sicher? de isch si aber huärä höch und de würd d'Rächnig nid uf ga... hei mär dert nid Phase-Phase gmässä?\\
 Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(\\
-Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$}
+Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$\\
+Andy: Ja esch guet, aber Phasespannig bedütet för mech Phas -> Sternponkt, dorom mössts denn wohl verkettete Spannung heisse bide Abbildung 2.\\
+Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?}
 \newpage
 
 
@@ -689,15 +691,61 @@ Deutlich ist sichtbar, wie der Strom bei einem Lastabwurf kurzzeitig ansteigt un
 \end{figure}\vspace{0.3cm}
 Die im Strom sichtbaren Schwingungen sind auch gut hör- und spürbar.
 
+\newpage
 \subsection{Variation der Wirkleistung}
+Für diesen Versuchsaufbau wurde die SM mit einem Nennerregerstrom von 1.1A betrieben. Durch die Variation der Last (Drehmoment der GM) soll veranschaulicht werden, wie sich der Polradwinkel in Abhängigkeit der Last verändert.\\
+
+\vspace{0.8cm}
+
+
+\begin{tabular}{|l|l|l|l|l|l|}
+ \hline
+ \rowcolor[gray]{.8}  $M$ [Nm] &  $\varphi$ [\degree]&  $S_1$  [kVA]&$P_1$ [kW]& $I_1$ [A] &Bemerkung\\
+\hline
+\hline
+ -10 & -2.2 & 0.51 & 0.5& 2.2& -\\
+\hline
+ -20 & -5.3 & 1.035 & 1.03& 4.4  & -\\
+\hline
+-30& -8.8 & 1.56 & 1.55 & 6.7 &-\\
+\hline
+\end{tabular}
+
+
+
+
+\textcolor{red}{TODO\\-Zeigerdiagramme Skizzieren\\-Erkenntnisse beschreiben}
+
+
+\newpage
 \subsection{Variation der Blindleistung}
 
+Für diesen Versuch wurde die ASM elektrisch entkoppelt (Rotorkreis offen).Über den Erregerstrom der SM wurde die Blindleistung variert. Je nach Betriebsfall (unter-/bzw. übererregt) fällt die Blindleistung positiv oder negativ aus.\\
+\vspace{0.8cm}
+
+
+\begin{tabular}{|l|l|l|l|l|l|l|}
+ \hline
+ \rowcolor[gray]{.8} $I_{err}$ [A] & $M$ [Nm] &  $\varphi$ [\degree]&  $S_1$  [kVA]&$P_1$ [kW]& $I_1$ [A] &Bemerkung\\
+\hline
+\hline
+ 0.5&-20.3 & -7.6 & 2.77 & 1.12& 11.8& $Q$ positiv\\
+\hline
+ 0.8&-20.3 & -6 & 1.73 & 1.06& 7.4  & $Q$ positiv\\
+\hline
+\hline
+\rowcolor[gray]{.9} 1.1&-20.3& -5.4 & 1.05 & 1.04& 4.5 &Nennbetrieb \\
+\hline
+\hline
+1.5&-20.3&-5&1.76&1.07&7.2&$Q$ negativ\\
+\hline
+1.8&-20.4&-5&2.78&1.1&11.9&$Q$ negativ\\
+\hline
+\end{tabular}
 
 
 
-
-
-
+\textcolor{red}{TODO\\-Zeigerdiagramme skizzieren \\-V-Kurve (I1 in abhängigkeit von Ierr) Skizzieren (bei 0.5kW und 5kW)\\-Erkenntnisse\\-Blindleistung berechnen mit Wattmeter: https://de.wikipedia.org/wiki/Blindleistung --> Unten bei \textbf{Symmetrische Belastung}}
 
 
 
