Am Deckblatt gebastelt

--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -2,17 +2,22 @@
 \begin{titlepage}
 
 \begin{center}
-\textbf{EAT FS 2019}\\
-\vspace{15mm}
 
-\textbf{\Huge Labor Synchronmaschiene}\\[2ex]
-\textbf{Testat Laborbericht}\\
+\noindent\makebox[\linewidth]{\rule{15cm}{0.4pt}}\\ 
+\vspace{10mm}
+\textbf{\Huge Laborbericht Synchronmaschiene}\\[2ex]
+\vspace{10mm}
+\begin{large}
+EAT FS 2019\\
+\end{large} 
+\vspace{0.5cm}	%Added by Andy
+\noindent\makebox[\linewidth]{\rule{15cm}{0.4pt}} 
 \vspace{40mm}
 
 
 \begin{tabular}{ll}
-Dozent:  & \quad Prof. Dr. Adrian Omlin\\[1ex]
-Abgabe: & \quad 21.\,Dezember\,2018\\
+Dozent:  & \quad Prof. Dr. Adrian Omlin\\[2ex]
+Abgabe: & \quad \today\\
 Autoren:& \quad Andy Fischer / Pascal Steck / Theo Zwahlen\\
 
 \end{tabular}
