--- a/Versuch.tex
+++ b/Versuch.tex
@@ -434,7 +434,8 @@ Theo: Bisch sicher? de isch si aber huärä höch und de würd d'Rächnig nid uf
 Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo dassmer mässid (Abbildung 2) ond send zom entschloss cho, dasses zom Sternponkt gohd, obwohl es de eigendlech werkli kei senn macht :(\\
 Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$\\
 Andy: Ja esch guet, aber Phasespannig bedütet för mech Phas -> Sternponkt, dorom mössts denn wohl verkettete Spannung heisse bide Abbildung 2.\\
-Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?}
+Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?\\
+Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfrag ob mär nä hüt fertig mache oder ig am Omlin schribä das er bis am Friti bi im isch... I passe Abbiudig 2 a (i tuä eifach scho der aues dür sqrt{3} teilä...}
 \newpage
 
 
