--- a/Versuch.tex
+++ b/Versuch.tex
@@ -325,7 +325,7 @@ Bei diesem Versuch wirkt die Synchronmaschine als Generator im Inselbetrieb. Die
 \vspace{0.3cm}
 \begin{figure}[H]
     \centering
-        \includegraphics[ trim=1cm 16.5cm 7.6cm 5.7cm, clip,
+        \includegraphics[ %trim=1cm 16.5cm 7.6cm 5.7cm,clip,
          width=0.8\textwidth]{SM_Inselbetrieb_Uebersicht.pdf}
     \caption{Übersicht SM im Inselbetrieb}
     \label{fig:abb1}
@@ -411,7 +411,7 @@ In der Berechnung wird $L_q$ verwendet, da der Strom $I_1$ bei ohmscher Last ann
 \begin{equ}[H]
 \begin{equation} \label{eq:Up}
 \begin{aligned} 
-	U_p = \frac{397 V}{\sqrt{3}} = 229.2 V \\
+	U_p  = 229.2 V \\
 	\Delta U = \sqrt{U_p^2-U_1^2} = 53 V \\
 	\varphi = arccos(\frac{U_1}{U_p}) = 13.4\degree
 	\end{aligned}
