Ubdate Schwebeverfahren mit erklärung von Omlin

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -287,8 +287,8 @@ Zur Bestimmung der Längsreaktanz $X_d$, resp. Querreaktanz $X_q$ wird der Verla
 
 \underline{Längsreaktanz}\\
 \vspace{0.2cm}
-Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom $I_1$ minimal ist  berechnet (zb. t = 0,55s). Mit dem kleinsten  Luftspalt ist der magnetische Fluss $\Phi$ am grössten. Da die Durchflutung $\Theta$ gleich bleibt, muss der magnetische Leitwert $G_m$ auch am grössten sein. Mit $L=N^2*G_m$ muss somit die Induktivität $L$ gross und der Strom $I_1$ minimal sein zum Zeitpunkt des kleinsten Luftspalt.
-\textcolor{red}{Iz geits uf... Chuntmä da drus?}
+Die Längsreaktanz wird zum Zeitpunkt, wenn der Strom $I_1$ minimal ist  berechnet (zb. t = 0,55s). 
+Durch einsetzen des magnetischen Fluss $\Phi$, gleichgesetzt mit der Summe der Ströme in der Spule $N*I$, in die Induktionsgleichung für die Spannung $u$, kann gezeigt werden, dass die Induktivität $L$ bei kleinem Luftspalt gross wird. Bei gleichbleibender Spannung muss also der Strom $I$ beim kleinsten Luftspalt minimal sein. 
 
 
 \begin{center}
@@ -305,7 +305,7 @@ $ \underline{\underline{L_d}}= \frac{\frac{\hat{U}_1}{\sqrt{2}}}{j \cdot 2 \cdot
 
 \underline{Querreaktanz}\\
 \vspace{0.2cm}
-Die Querreaktanz wird zum Zeitpunkt, wenn der Strom maximal ist  berechnet (zb. t = 0,7s). 
+Umgekehrt wird die Querreaktanz zum Zeitpunkt, wenn die Induktivität minimal und somit der Strom maximal ist berechnet (zb. t = 0,7s). Hier ist der Luftspalt am grössten.
 
 \begin{center}
 \begin{Large}
