--- a/Versuch.tex
+++ b/Versuch.tex
@@ -435,7 +435,7 @@ Andy: Ja ech be äbe nöme secher, ha gmeint mer hend no disskutiert vo wo zo wo
 Theo: s'Muäss eigändläch d'Phase-Phase-Spannig si. Omlin het sogar no gseit, mit den $I_e =1.1$ chöm mä öpä gad uf 230V $U_1$\\
 Andy: Ja esch guet, aber Phasespannig bedütet för mech Phas -> Sternponkt, dorom mössts denn wohl verkettete Spannung heisse bide Abbildung 2.\\
 Andere Frage: Bis wenn moss mer de Laborbrecht fertig ha ?\\
-Theo: Auso i glob 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfrag ob mär nä hüt fertig mache oder ig am Omlin schribä das er bis am Friti bi im isch... I passe Abbiudig 2 a (i tuä eifach scho der aues dür sqrt{3} teilä...}
+Theo: Auso i gloub 10 Tag nach em Versuech! Uaso am letzä Mänti... Iz isch dfrag ob mär nä hüt fertig mache oder ig am Omlin schribä das er bis am Friti bi im isch... I passe Abbiudig 2 a (i tuä eifach scho der aues dür sqrt{3} teilä...}
 \newpage
 
 
@@ -534,8 +534,6 @@ An der Messkurve ist zu erkennen, dass der Phasenstrom der Phasenspannung um ca.
 
 Die Phasenspannung eilt dem Phasenstrom um 90 \degree voraus. Auch hier ist der Einfluss der Belastungsimpedanz auf die Amplitude der Phasenspannung gut erkennbar. Während sie bei kapazitiver Last zunimmt, sinkt sie bei einer induktiven Belastung. \\
 
-\textcolor{red}{TODO: Einfluss auf die Resultate wenn der Sternpunkt verbunden ist -- bei den Messungen oben wurde der Sternpunkt nicht verbunden. Im Labor war kein signifikanter Unterschied erkennbar}
-
 \begin{figure}[H]
     \centering
         \includegraphics[ %trim=1cm 16.5cm 7.6cm 5.7cm, clip,
@@ -543,7 +541,7 @@ Die Phasenspannung eilt dem Phasenstrom um 90 \degree voraus. Auch hier ist der 
     \caption{Einfluss Sternpunktbezug}
     \label{fig:abb1}
 \end{figure}
-
+Bei Verbundenem Sternpunkt ändert sich der Strom $I_1£$ kaum. Die verwendete Last verfügt also über eine gute Symmetrie.
 
 
 
