Nr. der Messinstrumente notiert (es fehlen noch ein paar)

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -47,11 +47,11 @@ Schleifring ASM &10 kW &2&50 Hz& 230/400 V& 1420 $\frac{1}{min}$\\
  \hline
  \rowcolor[gray]{.8} \textbf{Bezeichnung} & \textbf{Nr}  \\
  \hline
- Messtrennverstärker 1  & xxx  \\
+ Messtrennverstärker 1  & ET11002  \\
 \hline
 Messtrennverstärker 2  & xxx  \\
 \hline
-Amperezange  & xxx  \\
+Amperezange  & 431  \\
 \hline
 Oszilloskop  & xxx  \\
 \hline
@@ -66,6 +66,8 @@ Dreiphasiges Leistungsmessgerät PM 3000  & -  \\
 Wattmeter   & -  \\
 \hline
 \end{tabular}
+
+\textcolor{red}{TODO: restliche Nr. ermitteln}
 
 
 \subsection{Speisungen und Belastungen}
