Edit Verbinden des Nulleiter

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -1,9 +1,6 @@
 \begin{flushleft}
 \part{Versuche}
 
-
-
-
 \section{Übersicht}
 
 \subsection{Laboreinrichtung}
@@ -662,15 +659,30 @@ Der Asynchronmotor mit einem Widerstand im Rottorkreis Treibt die Welle auf rund
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
 \subsubsection{Verbinden des Nulleiter}
-Bei verbundem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung und der Synchronmaschinenausgangspannung erkennen. Die Unterschiede entstehen durch die nicht 100\% symmetrisch gewickelte Maschine. Am detlichsten zeigt sich der Anteil einer dritten Harmonischen im Strom der Sternpunktverbindung.
-\vspace{0.3cm}
+Bei verbundenem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung und der Synchronmaschinenausgangsspannung erkennen. Die Unterschiede entstehen, weil die Maschine nicht absolut symmetrisch gewickelt ist. Am deutlichsten zeigt sich der Anteil einer dritten Harmonischen im Strom der Sternpunktverbindung.
+
+
 \begin{figure}[H]
-    \centering
- %       \includegraphics[width=0.6\textwidth]{SM_Synchronisation.pdf}
-    \caption{Darstellung der Synchronisation}
+\begin{minipage}[t]{0.49\textwidth}
+\centering
+\includegraphics[width=\textwidth]{641_Bild5_PhasenstromBeiSternpunktverbindung.pdf}
+\subcaption{Phasenstrom}
+\label{fig:abb1}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\centering
+\includegraphics[width=\textwidth]{641_Bild4_Nulleiterstrom}
+\subcaption{Strom in der Sternpunktverbindung}
     \label{fig:abb1}
-\end{figure}\vspace{0.3cm}
+\end{minipage}
+\end{figure}
+
+
+
+
+
 \subsection{Dämpferwicklung}
+
 In nächsten Versuch läuft die Asynchronmaschine als Dämpferwicklung mit. Sie dämpft Schwingungen die durch starke Laständerungen oder bei Zuschalten eines nicht ganz synchron laufenden Netzes entstehen. Eine Strommessung im Rotorkreis der ASM zeigt das Verhalten.
 \vspace{0.3cm}
 \begin{figure}[H]
