Edit Verbinden des Nulleiter

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -661,7 +661,7 @@ Der Asynchronmotor mit einem Widerstand im Rottorkreis Treibt die Welle auf rund
     \label{fig:abb1}
 \end{figure}\vspace{0.3cm}
 \subsubsection{Verbinden des Nulleiter}
-Bei verbundenem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung und der Synchronmaschinenausgangsspannung erkennen. Die Unterschiede entstehen, weil die Maschine nicht absolut symmetrisch gewickelt ist. Am deutlichsten zeigt sich der Anteil einer dritten Harmonischen im Strom der Sternpunktverbindung.
+Bei verbundenem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung und der Synchronmaschinenausgangsspannung erkennen. Die Unterschiede entstehen, weil die Maschine nicht absolut symmetrisch gewickelt ist. Am deutlichsten zeigt sich der Anteil einer dritten Harmonischen im Strom der Sternpunktverbindung. Im Gegensatz dazu verläuft der Phasenstrom ohne Sternpunktverbindung nahezu sinusförmig.
 
 
 \begin{figure}[H]
@@ -677,6 +677,7 @@ Bei verbundenem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung 
 \subcaption{Strom in der Sternpunktverbindung}
     \label{fig:abb1}
 \end{minipage}
+\caption{Strom und Spannung bei verbundenen Sternpunkten}
 \end{figure}
 
 
