Edit Figures Sternpunktverbindung (Beschriftungen)

--- a/Versuch.tex
+++ b/Versuch.tex
@@ -667,13 +667,15 @@ Bei verbundenem Nulleiter kann man gut die Abweichung Zwischen der Netzspannung 
 \begin{figure}[H]
 \begin{minipage}[t]{0.49\textwidth}
 \centering
-\includegraphics[width=\textwidth]{641_Bild5_PhasenstromBeiSternpunktverbindung.pdf}
+\includegraphics[trim=0cm 5cm 0cm 5cm, clip,
+width=\textwidth]{641_Bild5_PhasenstromBeiSternpunktverbindung.pdf}
 \subcaption{Phasenstrom}
 \label{fig:abb1}
 \end{minipage}
 \begin{minipage}[t]{0.49\textwidth}
 \centering
-\includegraphics[width=\textwidth]{641_Bild4_Nulleiterstrom}
+\includegraphics[trim=0cm 5cm 0cm 5cm, clip,
+width=\textwidth]{641_Bild4_Nulleiterstrom}
 \subcaption{Strom in der Sternpunktverbindung}
     \label{fig:abb1}
 \end{minipage}
